- Enable "delete" command for saved strings
- Enable naming of matrix columns, via colnames function or
  the GUI matrix editor
- Enable "dataset resample" in loops (experimental)
- Runs test: enable the "--difference" option in the CLI;
  handle the case where positive and negative values are not
  equiprobable by default, but add an "--equal" option to 
  impose the equiprobability assumption
- Fix sub-sampling bug (new in 1.7.3)

2/29/2008 version 1.7.3
- Fix for 64-bit platforms: don't use "long" as the C
  counterpart of Fortran 77 "INTEGER"
- Make the rcond function available for asymmetric matrices
- Enable the $yhat accessor for fitted values in equation
  systems
- Add Italian function help to Windows build
- Weekly to monthly data compaction: respect the user's
  choice of compaction method, as claimed
- Add trimr matrix function (as in Gauss)
- Extend matrix "division" a la Gauss
- Disallow user functions with the same name as a built-in
  function
- Update several screenshots in User's Guide

2/25/2008 version 1.7.2
- list-creation: add "dataset" option to use all currently
  available data series
- Fix bug in recording result of TSLS heteroskedasticity test
- Add sscanf command (a subset of C sscanf functionality)
- Add shell capture for strings via $(shellcommand)
- Paths stuff: add (non-configurable) "dotdir" to hold per-user
  automatically-created files
- Fix bugs 1861010, 1868859, 1869271, 1870459, 1870973,
  1871110, 1871135, 1873625, 1874601, 1881849, 1897648
- Rationalize frequency plot dialog
- Add Help item to forecast dialog
- Fixes for matrix "dot operations"
- Fix breakage in graph color selector
- Fixes for ODS spreadsheet importer
- Document the --auto option for the "omit" command, and add
  a GUI handle for it
- MS Windows and OS X packages: update to gnuplot 4.3 (CVS)
- Graphing internals: use UTF-8 for internationalized strings
- Models having an exact fit: block various invalid tests
- det() function: fix for singular matrices